<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="ST_AxFunctionsPTP" Id="{9da17fac-006e-46e9-8e0b-20c54ef239fa}">
    <Declaration><![CDATA[//structure includes point-to-point-functions
TYPE ST_AxFunctionsPTP :
STRUCT
	MoveVelocitiy		: MC_MoveVelocity;
	MoveAbsolute1		: MC_MoveAbsolute;
	MoveAbsolute2		: MC_MoveAbsolute;
	Stop				: MC_Stop;
	Halt				: MC_Halt;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>