<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <GVL Name="GlobalVariables" Id="{085f587e-4932-4daf-9259-49a8d2146225}">
    <Declaration><![CDATA[VAR_GLOBAL
		AxisMain					: AXIS_REF;						//Main belt
		AxisPlastic					: AXIS_REF;						//Plastic belt
		AxisMetal					: AXIS_REF;						//Metal belt

		bAxisMainResetDone			: BOOL;							//True if main belt ressetting is finished 
		bPlasticEjectionResetDone	: BOOL;							//True if plasticejection ressetting is finished 
		bMetalEjectionResetDone		: BOOL;							//True if metalejection ressetting is finished 

		PackTags					: ST_PackMLv30;					//PackTags

		nVisuProductCommand			: DINT;							//Products to produce

		bButtonProductionReq		: BOOL;							//TRUE when a mode change to PRODUCTION is requested
		stChangeIntoProduction		: ST_ChangeIntoProduction;		//Result of command box "Change to Production requested"

		aUnitInfo					: ARRAY [1..12] OF ST_UnitInfo;	//Array includes the states and modes of machineunits	
		aCaption					: ARRAY [1..12] OF STRING := ['F1','F2','F3','F4','F5','F6','F7','F8','F9','F10','F11','F12'];
		aKeyPressed					: ARRAY [1..12] OF BOOL;	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>